--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,12 @@
-pytube==12.1.0
+asgiref==3.3.4
+colorama==0.4.6
+Django==3.2
+djangorestframework==3.12.4
+exceptiongroup==1.1.1
+iniconfig==2.0.0
+packaging==23.1
+pluggy==1.0.0
+pytest==7.3.1
+pytz==2021.1
+sqlparse==0.4.1
+tomli==2.0.1
