--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
-asgiref==3.3.4
-colorama==0.4.6
-Django==3.2
-djangorestframework==3.12.4
-exceptiongroup==1.1.1
-iniconfig==2.0.0
-packaging==23.1
-pluggy==1.0.0
-pytest==7.3.1
-pytz==2021.1
-sqlparse==0.4.1
-tomli==2.0.1
+Brotli==1.0.9
+certifi==2022.6.15
+charset-normalizer==2.1.0
+idna==3.3
+mutagen==1.46.0
+pycryptodomex==3.17
+pyTelegramBotAPI==4.6.1
+python-dotenv==1.0.0
+pytube==12.1.0
+requests==2.28.1
+telebot==0.0.4
+typing_extensions==4.5.0
+urllib3==1.26.11
+websockets==11.0.2
+youtube-dl==2021.12.17
+yt-dlp==2023.3.4
